chore: pulled qty spacing fix from sticky-addo-tocart

--- a/sass/site/compatibility/woocommerce/sticky-add-to-cart.scss
+++ b/sass/site/compatibility/woocommerce/sticky-add-to-cart.scss
@@ -65,7 +65,7 @@
         padding-right: 14px;
 
         &.ast-vertical-style-applied {
-            padding-right: 0;
+            margin-right: 1em;
         }
     }
 
